Repositories are now injected instead of instances of a base repo, refactored profile picture upload methods, changed the way the server starts, added a current user checker, new logger implementation, added some validation to me controller, tokens are now deleted when user changes his email or password.

--- a/server/plop-templates/service.hbs
+++ b/server/plop-templates/service.hbs
@@ -4,7 +4,7 @@ import { Logger, LoggerService } from './logger.service';
 @Service()
 export class {{firstUpperCase name}}Service {
 
-    constructor(@Logger() private logger: LoggerService) { }
+    constructor(@Logger({__filename}) private logger: LoggerService) { }
 
     /**
      * Service example
