--- a/server/plop-templates/controller.hbs
+++ b/server/plop-templates/controller.hbs
@@ -1,7 +1,7 @@
 import { Get, UseBefore, JsonController, Res, Delete, Patch, Put, Post } from 'routing-controllers';
 import { Response } from 'express';
-import { LoggingMiddleware } from '../middleware/http_logging.middleware';
-import { ApiResponse, HTTP_STATUS_CODE } from '../handlers/api_response.handler';
+import { LoggingMiddleware } from '../../middleware/http_logging.middleware';
+import { ApiResponse, HTTP_STATUS_CODE } from '../../handlers/api_response.handler';
 
 @JsonController('/{{route}}')
 @UseBefore(LoggingMiddleware)
