Fixed register controller

--- a/plop-templates/service.hbs
+++ b/plop-templates/service.hbs
@@ -4,7 +4,7 @@ import { Logger, LoggerService } from '../../logger/logger.service';
 @Service()
 export class {{firstUpperCase name}}Service {
 
-    constructor(@Logger(__filename) private logger: LoggerService) {
+    constructor(@Logger(__filename) private readonly logger: LoggerService) {
 
     /**
      * Service example
